--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@react-google-maps/api": "^2.19.2",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
     "framer-motion": "^10.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
+    "react-redux": "^9.0.4",
     "sweetalert2": "^11.7.23"
   },
   "devDependencies": {
