--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
+    "date-fns": "^3.3.1",
     "framer-motion": "^10.16.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -37,5 +38,4 @@
     "react-error-overlay": "6.0.11",
     "vite": "^4.4.9"
   }
-  
 }
