--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.0.4",
     "sweetalert2": "^11.7.23"
   },
