--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 VITE_GOOGLE_MAPS_API=AIzaSyCae5GpXYnpkqg59EA7UNPgvGX4r3xuBp0
+VITE_CAPTCHA_API=6Lfk6bgoAAAAAHNUWYbuKqWxvhqEYeH8YqUtB-Yr
+VITE_API_URL=https://api-vqc.viajesquality.com/api
